--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,10 @@ on:
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ main ]
+    branches: [main]
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
-  
+
 # Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
@@ -19,10 +19,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
-        uses: actions/checkout@v2          
+        uses: actions/checkout@v2
       - name: Install, build, and upload your site
         uses: withastro/action@v0
-
+  lint:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: eslint-astro
+        uses: actions/checkout@v2
+        run: |
+          npm ci
+          npm lint
   deploy:
     needs: build
     runs-on: ubuntu-latest
