--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.41.0",
     "cz-conventional-changelog": "^3.3.0",
-    "prettier": "^2.7.1"
+    "eslint": "^8.26.0",
+    "eslint-plugin-astro": "^0.20.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.7.0"
   },
   "config": {
     "commitizen": {
