--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint":"eslint --ext .js,.astro,.mjs src"
+  
   },
   "dependencies": {
     "@astrojs/tailwind": "^2.0.1",
@@ -17,12 +19,8 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.41.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.26.0",
-    "eslint-plugin-astro": "^0.20.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.7.0"
+    "prettier": "^2.7.1"
   },
   "config": {
     "commitizen": {
