--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint":"eslint --ext .js,.astro,.mjs src"
-  
+    "lint": "eslint --ext .js,.astro,.mjs src"
   },
   "dependencies": {
     "@astrojs/tailwind": "^2.0.1",
@@ -19,8 +18,12 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.41.0",
     "cz-conventional-changelog": "^3.3.0",
-    "prettier": "^2.7.1"
+    "eslint": "^8.26.0",
+    "eslint-plugin-astro": "^0.20.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   },
   "config": {
     "commitizen": {
