ci(deploy.yml): correct ci flow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ permissions:
 
 jobs:
   build:
+    needs: unit_test-lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
