--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
     "lint": "eslint --ext .js,.astro,.mjs src"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.9.2",
-    "daisyui": "^2.51.6",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/react": "^4.0.0",
+    "@astrojs/tailwind": "^5.1.3",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
+    "astro": "^5.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.59.6",
